# training-robust-and-generalizable-quantum-models

./: .gitignore  README.md  pyproject.toml
circle1/: __init__.py  analyse_generalization_non_trainable.py  analyse_generalization_trainable.py  analyse_robustness_non_trainable.py  analyse_robustness_trainable.py  circuit.py  data.py  data_types.py  file.py  plot.py  plot_circuits.py  plot_generalization_non_trainable.py  plot_generalization_trainable.py  plot_predictions.py  plot_robustness.py  training_non_trainable.py  training_trainable.py
data/: generalization_non_trainable.p  generalization_trainable.p  robustness_non_trainable.p  robustness_trainable.p
